Addressed all but one of Ricardo's comments.  Addressing the mistake with pBuildWF requires rerunning optimization for Section III :(

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,4 +1,4 @@
-\section{Conclusion}
+\section{Conclusions}
 \label{sec:conclusion}
 
 In this paper, we proposed that new renewable powered datacenters
@@ -9,15 +9,17 @@ impact of new datacenters on the New England ISO transmission system.
 Using simulation, we showed that different placements of a new
 datacenter can change the overloading of transmission lines, the
 number of unacceptable grid voltage deviations, and transmission
-system losses.  Thus, strategic placement of new renewable powered
-datacenters is critical since ignoring transmission constraints could
-make their developments infeasible given that: 1) it is very expensive to
-build new transmission lines; 2) building a new transmission line
-takes 8-10 years; and 3) in certain cases it is not possible to build
-new lines (for example, lines passing through densely populated cities
-with land constraints).  Even when transmission constraints are met,
+system losses.
+% Thus, strategic placement of new renewable powered
+% datacenters is critical since ignoring transmission constraints could
+% make their developments infeasible given that: 1) it is very expensive to
+% build new transmission lines; 2) building a new transmission line
+% takes 8-10 years; and 3) in certain cases it is not possible to build
+% new lines (for example, lines passing through densely populated cities
+% with land constraints).
+Even when transmission constraints are met,
 strategic placement can lead to lower overall costs for grid operators
-and datacenters owners.  We developed an optimization framework for
+and datacenters owners.  We thus developed an optimization framework for
 the placement of a new datacenter and offsetting wind farm that
 considers transmission constraints and system losses, and used it in a
 case study.  Our results show that considering the cost of
