--- a/framework.tex
+++ b/framework.tex
@@ -33,7 +33,7 @@ $\textit{pEnergy}(l)$ & grid electricity price at $l$ & \$/kWh \\
 $\textit{powNeed}(t)$ & avg computing power demand of DC during $t$ &  kW \\
 \hline \hline
 $\beta(l,t)$ & avg generation efficiency of wind energy at $l$ during $t$ &  \%  \\
-$\textit{wfArea}$ & land needed per kW wind power & \$/m$^2$ \\
+$\textit{wfArea}$ & land needed per kW wind power & m$^2$/kW \\
 $\textit{pBuildWF}$ & per kW price of building a wind power plant & \$/kW \\
 %$avgEff(l)$ & avg generation efficiency of wind energy at $l$ & \% \\
 $\textit{revEnergy}(l)$ & revenue for selling wind energy to grid at $l$ & \$/kWh \\
@@ -91,7 +91,7 @@ Minimize {\em totalCost}, where
   \textit{wfCost}&=& \textit{wfCAPEX - wfRev}  \\
   \textit{wfCAPEX}&=& \textit{wfLandCost + wfBuildCost} \\
   \textit{wfLandCost}&=& \textit{pLand}(w) \cdot  \textit{wfArea} \cdot  \textit{wfCapacity} \\
-  \textit{wfBuildCost}&=& \textit{pBuildWF} \cdot \textit{ wfCapicity + cLinePow(w)} \\
+  \textit{wfBuildCost}&=& \textit{pBuildWF} \cdot \textit{ wfCapacity + cLinePow(w)} \\
   \textit{wfRev}&=& \textit{revEnergy}(w) \cdot  \sum_{t \in T}{ |t| \cdot
                     \beta(w,t) \cdot  \textit{wfCapicity} } \\
   \textit{transCost}&=& \textit{pTransLoss} \cdot \sum_{t \in T}{ |t| \cdot  \textit{transLoss}(t)} % + disLoss(t))}\\
@@ -158,7 +158,7 @@ violations.
 
 \subsection{Solving the Optimization Problem}
 
-The optimization problem formulated in Figure~\ref{fig:optimization} is non-linear, since the calculation of $transLoss(t)$ requires solving the non-linear power flow equations introduced in Section \ref{sec:casestudy}.  Currently, we perform a complete search over all possible placements of the datacenter and wind farm to find the best solution.  This approach works well for the scale that we are studying (e.g., the New England system).  However, as the system scales to much larger sizes, a more scalable approach would eventually be needed.  We leave this for future work.  (Note that the New England system that we study already covers a large area -- most of the North Eastern region of the U.S. and some parts of Canada -- so that it may not be necessary to study much larger systems.)
+The optimization problem formulated in Figure~\ref{fig:optimization} is non-linear, since the calculation of $transLoss(t)$ requires solving the non-linear power flow equations introduced in Section \ref{sec:casestudy}.  Currently, we perform a complete search over all possible placements of the datacenter and wind farm to find the best solution.  This approach works well for the scale that we are studying (e.g., the New England system, which includes most of the US North East and parts of Canada).  Studying larger systems may require a more scalable approach, but we leave this issue for future work.
 
 % datacenters and renewable power plant, as well as the capacity provisioned at each location for datacenters or green power plants (if any).
 
