update experiment results using right wfBuildCost

--- a/framework.tex
+++ b/framework.tex
@@ -93,7 +93,7 @@ Minimize {\em totalCost}, where
   \textit{wfLandCost}&=& \textit{pLand}(w) \cdot  \textit{wfArea} \cdot  \textit{wfCapacity} \\
   \textit{wfBuildCost}&=& \textit{pBuildWF} \cdot \textit{ wfCapacity + cLinePow(w)} \\
   \textit{wfRev}&=& \textit{revEnergy}(w) \cdot  \sum_{t \in T}{ |t| \cdot
-                    \beta(w,t) \cdot  \textit{wfCapicity} } \\
+                    \beta(w,t) \cdot  \textit{wfCapacity} } \\
   \textit{transCost}&=& \textit{pTransLoss} \cdot \sum_{t \in T}{ |t| \cdot  \textit{transLoss}(t)} % + disLoss(t))}\\
 \end{eqnarray}
 \end{scriptsize}
