--- a/placement.tex
+++ b/placement.tex
@@ -26,7 +26,7 @@ with the long-term averages for the location.
 We use the TMY wind speeds and air pressures,
 conversion losses, and a model of the GE 1.5MW wind
 turbine \cite{lei2006modeling} to compute
-$\beta(l,t)$ at each location $l$ during time epoch $t$. 
+$\beta(l,t)$ at each location $l$ during time epoch $t$.
 
 \begin{figure}[ht]
 \centering
@@ -59,17 +59,17 @@ years.  For financing, we use an annual interest rate of 3.25\%.
 \hline
 & \multicolumn{1}{p{22pt}|}{Burlinton, NH} &
 \multicolumn{1}{p{28pt}|}{Springfield Hartnes, VT} &
-\multicolumn{1}{p{20pt}|}{Nash Island, CT} &
+\multicolumn{1}{p{20pt}|}{Moose Land, ME} &
 \multicolumn{1}{p{27pt}|}{Marthas Vineyard, RI} &
 \multicolumn{1}{p{27pt}|}{Mount Washington, NH}
 \\
 \hline
-$pLand$ (\$/m$^2$)&946.9&946.9&946.9&680.21&946.9  \\
-$maxPUE$&1.645&1.645&1.619&1.682&1.676 \\
-$cLinePow$ (M\$)&64.5&77.2&16.6	&86.6&107.1 \\
-$cLineNet$ (M\$)&13.5&16.7&16.9&17.7&21.3 \\
+$pLand$ (\$/m$^2$)&946.9&946.9&1134.06&680.21&946.9  \\
+$maxPUE$&1.645&1.645&1.681&1.682&1.676 \\
+$cLinePow$ (M\$)&64.5&77.2&219.0&86.6&107.1 \\
+$cLineNet$ (M\$)&13.5&16.7&42.4&17.7&21.3 \\
 $pEnergy$ (\$/kWh)&0.0941&0.0941&0.1281&	0.1281&	0.1257 \\
-Average $\beta$ (\%) &11.7&2.7&	40&	15.9&56.8 \\
+Average $\beta$ (\%) &11.7&2.7&	53.4&	15.9&56.8 \\
 \hline
 \end{tabular}
 \label{tab:loc-dependent-pars}
@@ -93,7 +93,7 @@ $pServer$ 	&2000 &\$/serv\\
 $pSwitch$  & 20000 &\$/switch\\
 $\textit{pNBWServ}$&	1 & \$/serv-month\\
 $wfArea$ &	18.21 & m$^2$/kW\\
-$\textit{pBuildWF}$&	2.1& \$/kW \\
+$\textit{pBuildWF}$&	2100& \$/kW \\
 
 \hline
 \end{tabular}
@@ -176,8 +176,8 @@ to lowest overall cost.
 The locations found and the total cost achieved by the five strategies
 are listed in Table \ref{tab:costsaving}.  These results show that
 using the full optimization framework (Jointly) achieves savings of
-8\% compared to simply co-locating the datacenter and wind farm
-(Co-location) and 3.4\% compared to not accounting for transmission
+6.4\% compared to simply co-locating the datacenter and wind farm
+(Co-location) and 1.3\% compared to not accounting for transmission
 system losses (DC\_WF\_OPT).  Interestingly, the simultaneous
 placement of datacenter and wind farm (Jointly) gives the same results
 as the individual placement of datacenter and wind farm (DC+G\_WF+G).
@@ -203,15 +203,15 @@ increasing the total cost.
 \textbf{Strategy}& \textbf{Datacenter location} &\textbf{Wind farm location} &\textbf{Total cost (M\$/year)}% & \textbf{Cost saving (\%)}
  \\
 \hline
-\textbf{DC\_WF\_OPT} &  Burlington,NH  & Mount Washington, NH & 461.5%& 30.4
+\textbf{DC\_WF\_OPT} &  Burlington,NH  & Mount Washington, NH & 556.7%& 30.4
 \\
-\textbf{DC+G\_WF+G} &Springfield Hartnes, VT  & Nash Island, CT& 446.2%& 32.7
+\textbf{DC+G\_WF+G} &Springfield Hartnes, VT  & Moose Land, ME& 564.8%& 32.7
 \\
-\textbf{Jointly} &Springfield Hartnes, VT&  Nash Island, CT & 446.2% & 32.7
+\textbf{Jointly} &Springfield Hartnes, VT&  Moose Land, ME & 549.3% & 32.7
 \\
-\textbf{Min\_Loss} &Springfield Hartnes, VT & Marthas Vineyard, RI & 481.5% & 27.4
+\textbf{Min\_Loss} &Springfield Hartnes, VT & Marthas Vineyard, RI & 650.5% & 27.4
 \\
-\textbf{Co-location}& Nash Island, CT &Nash Island, CT& 480.7% & 27.5
+\textbf{Co-location}& Mount Washington, NH &Mount Washington, NH& 587.2% & 27.5
 \\
 \hline
 \end{tabular}
