--- a/placement.tex
+++ b/placement.tex
@@ -60,16 +60,16 @@ years.  For financing, we use an annual interest rate of 3.25\%.
 & \multicolumn{1}{p{22pt}|}{Burlinton, NH} &
 \multicolumn{1}{p{28pt}|}{Springfield Hartnes, VT} &
 \multicolumn{1}{p{20pt}|}{Moose Land, ME} &
-\multicolumn{1}{p{27pt}|}{Marthas Vineyard, RI} &
+\multicolumn{1}{p{27pt}|}{Nash Island, CO} &
 \multicolumn{1}{p{27pt}|}{Mount Washington, NH}
 \\
 \hline
-$pLand$ (\$/m$^2$)&946.9&946.9&1134.06&680.21&946.9  \\
-$maxPUE$&1.645&1.645&1.681&1.682&1.676 \\
-$cLinePow$ (M\$)&64.5&77.2&219.0&86.6&107.1 \\
-$cLineNet$ (M\$)&13.5&16.7&42.4&17.7&21.3 \\
-$pEnergy$ (\$/kWh)&0.0941&0.0941&0.1281&	0.1281&	0.1257 \\
-Average $\beta$ (\%) &11.7&2.7&	53.4&	15.9&56.8 \\
+$pLand$ (\$/m$^2$)&946.9&946.9&1034.1&946.9&946.9  \\
+$maxPUE$&1.645&1.645&1.681&1.619&1.676 \\
+$cLinePow$ (M\$)&64.5&77.2& 19.0&16.6&107.1 \\
+$cLineNet$ (M\$)&13.5&16.7&42.4&16.9&21.3 \\
+$pEnergy$ (\$/kWh)&0.0941&0.0941&0.1281& 0.1281&	0.1257 \\
+Average $\beta$ (\%) &11.7&2.7&	53.4&	40.0 &56.8 \\
 \hline
 \end{tabular}
 \label{tab:loc-dependent-pars}
@@ -176,8 +176,8 @@ to lowest overall cost.
 The locations found and the total cost achieved by the five strategies
 are listed in Table \ref{tab:costsaving}.  These results show that
 using the full optimization framework (Jointly) achieves savings of
-6.4\% compared to simply co-locating the datacenter and wind farm
-(Co-location) and 1.3\% compared to not accounting for transmission
+7.6\% compared to simply co-locating the datacenter and wind farm
+(Co-location) and 3.3\% compared to not accounting for transmission
 system losses (DC\_WF\_OPT).  Interestingly, the simultaneous
 placement of datacenter and wind farm (Jointly) gives the same results
 as the individual placement of datacenter and wind farm (DC+G\_WF+G).
@@ -203,15 +203,15 @@ increasing the total cost.
 \textbf{Strategy}& \textbf{Datacenter location} &\textbf{Wind farm location} &\textbf{Total cost (M\$/year)}% & \textbf{Cost saving (\%)}
  \\
 \hline
-\textbf{DC\_WF\_OPT} &  Burlington,NH  & Mount Washington, NH & 556.7%& 30.4
+\textbf{DC\_WF\_OPT} &  Burlington,NH  & Mount Washington, NH & 552.2%& 30.4
 \\
-\textbf{DC+G\_WF+G} &Springfield Hartnes, VT  & Moose Land, ME& 549.3%& 32.7
+\textbf{DC+G\_WF+G} &Springfield Hartnes, VT  & Moose Land, ME& 533.7%& 32.7
 \\
-\textbf{Jointly} &Springfield Hartnes, VT&  Moose Land, ME & 549.3% & 32.7
+\textbf{Jointly} &Springfield Hartnes, VT&  Moose Land, ME & 533.7% & 32.7
 \\
-\textbf{Min\_Loss} &Springfield Hartnes, VT & Marthas Vineyard, RI & 650.5% & 27.4
+\textbf{Min\_Loss} &Springfield Hartnes, VT & Nash Island, CO & 550.0% & 27.4
 \\
-\textbf{Co-location}& Mount Washington, NH &Mount Washington, NH& 587.2% & 27.5
+\textbf{Co-location}& Mount Washington, NH &Mount Washington, NH& 577.3% & 27.5
 \\
 \hline
 \end{tabular}
