--- a/paper.bib
+++ b/paper.bib
@@ -9,8 +9,8 @@ booktitle = "Energy storage",
 }
 
 @article{interconnection2010survey,
-  title={A survey of transmission cost allocation issues, methods and practices},
-  author={Interconnection, PJM},
+  title="{A Survey of Transmission Cost Allocation Issues, Methods and Practices}",
+  author={PJM},
   journal={Valley Forge},
   year={2010}
 }
@@ -25,12 +25,10 @@ booktitle = "Energy storage",
 }
 
 @inproceedings{AdamWierman2014,
- title={Opportunities and challenges for data center demand response},
+ title="{Opportunities and Challenges for Data Center Demand Response}",
   author={Wierman, Adam and Liu, Zhenhua and Liu, Iris and Mohsenian-Rad, Hamed},
-  booktitle={Green Computing Conference (IGCC), 2014 International},
-  pages={1--10},
-  year={2014},
-  organization={IEEE}
+  booktitle={Proceedings of the International Green Computing Conference (IGCC)},
+  year={2014}
 }
 
 @article{haowang2014grid,
@@ -80,10 +78,11 @@ ISSN={0885-8977},}
 	year      = {2011},
 }
 
-@article{bills1970line,
-  title={On-line stability analysis study},
-  author={Bills, GW and others},
-  journal={Report for the Edison Electric Institute RP90-1},
+@TechReport{bills1970line,
+  title="{On-line Stability Analysis Study}",
+  author={Bills, G. W.},
+  institution={Edison Power Research Institute},
+  number={RP90-1},
   year={1970}
 }
 
@@ -95,23 +94,19 @@ ISSN={0885-8977},}
 }
 
 @article{lei2006modeling,
-  title={Modeling of the wind turbine with a doubly fed induction generator for grid integration studies},
+  title="{Modeling of the Wind Turbine with a Doubly Fed Induction Generator for Grid Integration Studies}",
   author={Lei, Yazhou and Mullane, Alan and Lightbody, Gordon and Yacamini, Robert},
-  journal={Energy Conversion, IEEE Transactions on},
+  journal={IEEE Transactions on Energy Conversion},
   volume={21},
   number={1},
-  pages={257-264},
-  year={2006},
-  publisher={IEEE}
+  year={2006}
 }
 
 @inproceedings{berral2014building,
-  title={Building Green Cloud Services at Low Cost},
+  title="{Building Green Cloud Services at Low Cost}",
   author={Berral, Josep L and Goiri, Inigo and Nguyen, Thu D and Gavalda, Ricard and Torres, Jordi and Bianchini, Ricardo},
-  booktitle={Distributed Computing Systems (ICDCS), 2014 IEEE 34th International Conference on},
-  pages={449-460},
-  year={2014},
-  organization={IEEE}
+  booktitle={Proceedings of the International Conference on Distributed Computing Systems (ICDCS)},
+  year={2014}
 }
 
 
@@ -219,13 +214,10 @@ ISSN={0885-8977},}
 }
 
 @inproceedings{Goiri11place,
-  title={Intelligent placement of datacenters for internet services},
-  author={Le, Kien and Guitart, Jordi and Torres, Jordi and Bianchini, Ricardo and others},
-  booktitle={Distributed Computing Systems (ICDCS), 2011 31st International Conference on},
-  pages={131--142},
+  title="{Intelligent Placement of Datacenters for Internet Services}",
+  author={Goiri, \'I. and Le, Kien and Guitart, Jordi and Torres, Jordi and Bianchini, Ricardo},
+  booktitle={Proceedings of the International Conference on Distributed Computing Systems (ICDCS)},
   year={2011},
-  organization={IEEE}
-
 }
 
 @inproceedings{Goiri11,
@@ -248,13 +240,6 @@ ISSN={0885-8977},}
     title = "{Parasol and GreenSwitch: Managing Datacenters Powered by Renewable Energy}",
     booktitle = "ASPLOS",
     year = "2013"
-}
-
-@inproceedings{Ren12,
-	title="{Carbon-Aware Energy Capacity Planning for Datacenters}",
-	author={C. Ren and others},
-	booktitle={MASCOTS},
-	year="2012",
 }
 
 @inproceedings{ZhangWW11,
@@ -299,26 +284,26 @@ ISSN={0885-8977},}
 	year = {2006}
 }
 
-@inproceedings{Stansberr06,
+@article{Stansberr06,
 	author = {M. Stansberr},
 	title = "{Data Center Locations Ranked by Operating Cost}",
-	booktitle = {SearchDatacenter.com},
+	journal = {SearchDatacenter.com},
 	year = {2006}
 }
 
-@inproceedings{Dalger05,
+@article{Dalger05,
 	author = {D. Alger},
 	title = "{Choosing an Optimal Location for Your Data Center}",
-	booktitle = {InformIT},
+	journal = {InformIT},
+	month = sep,
 	year = {2006}
 }
 
 @article{Boley09,
 	author = {B. Oley},
 	title = "{Power \& Approaching the Best Place to Build a Data Center}",
-	booktitle = {Data Center Journal},
-	year = {2009},
-	pages = {32-33}
+	journal = {The Data Center Journal},
+	year = {2009}
 }
 
 @book{BarrosoH09,
@@ -434,26 +419,22 @@ and Data Averaging}",
 }
 
 @inproceedings{larumbe2012optimal,
-  title={Optimal location of data centers and software components in cloud computing network design},
+  title="{Optimal Location of Data Centers and Software Components in Cloud Computing Network Design}",
   author={Larumbe, Federico and Sans{\`o}, Brunilde},
-  booktitle={Proceedings of the 2012 12th IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing (ccgrid 2012)},
-  pages={841--844},
-  year={2012},
-  organization={IEEE Computer Society}
-
+  booktitle={Proceedings of the IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing (CCGRid)},
+  year={2012}
 }
 
 @Book{Koomey2011,
 	author = {J. Koomey},
 	title = {{Growth In Data Center Electricity Use 2005 To 2010}},
 	publisher = {Analytics Press},
-	address = {Oakland, CA},
 	year = {2011}
 }
 
 @misc{GoogleGreen,
 author={{Google}},
-title={{Renewable energy \- Data Centers \- Google}},
+title={{Google Data Centers -- Renewable Energy}},
 note={\url{http://www.google.com/about/datacenters/renewable/}},
 year = {2014}
 }
@@ -628,13 +609,10 @@ year = {2013}
 }
 
 @inproceedings{gao2013answer,
-  title={The answer is blowing in the wind: Analysis of powering internet data centers with wind energy},
+  title="{The Answer is Blowing in the Wind: Analysis of Powering Internet Data Centers with Wind Energy}",
   author={Gao, Van and Zeng, Zheng and Liu, Xue and Kumar, P Roshan},
-  booktitle={INFOCOM, 2013 Proceedings IEEE},
-  pages={520--524},
-  year={2013},
-  organization={IEEE}
-
+  booktitle={Proceedings of the INFOCOM Conference},
+  year={2013}
 }
 
 @article{Rahman13,
@@ -645,10 +623,9 @@ year = {2013}
 
 @INPROCEEDINGS{Mohsenian-Rad10grid,
 author={Mohsenian-Rad, A.-H. and Leon-Garcia, A.},
-booktitle={2010 First IEEE International Conference on Smart Grid Communications (SmartGridComm)},
+booktitle={Proceedings of the IEEE International Conference on Smart Grid Communications (SmartGridComm)},
 title="{Coordination of Cloud Computing and Smart Power Grids}",
-year={2010},
-pages={368-372}
+year={2010}
 }
 
 @misc{lbnl12report,
@@ -667,38 +644,38 @@ pages={368-372}
 
 
 @inproceedings{liu2014pricing,
- title={Pricing data center demand response},
+ title="{Pricing Data Center Demand Response}",
   author={Liu, Zhenhua and Liu, Iris and Low, Steven and Wierman, Adam},
-  booktitle={The 2014 ACM international conference on Measurement and modeling of computer systems},
-  pages={111--123},
-  year={2014},
-  organization={ACM}
-
+  booktitle={Proceedings of the ACM SIGMETRICS Conference},
+  year={2014}
 }
 
 @inproceedings{Aikema12,
   author    = {David Aikema and
                Rob Simmonds and
                Hamidreza Zareipour},
-  title     = {Data centres in the ancillary services market},
-  booktitle = {IGCC},
-  year      = {2012},
-  pages     = {1-10}
+  title     = "{Data Centres in the Ancillary Services Market}",
+  booktitle = {Proceedings of the International Green Computing Conference (IGCC)},
+  year      = {2012}
 }
 
 @Misc{RM14DCGrowth,
   author = 	 "{ResearchAndMarkets}",
   title = 	 "{Global Data Center Construction Market 2014-2018}",
   year = 	 {2014},
-  note =         {\nolinkurl{http://www.researchandmarkets.com/reports/2757583/}}
+  note =         {\url{http://www.researchandmarkets.com/reports/2757583/}}
 }
 
 @InProceedings{Ren12MASCOTS,
-  title={Carbon-aware energy capacity planning for datacenters},
+  title="{Carbon-Aware Energy Capacity Planning for Datacenters}",
   author={Ren, Chuangang and Wang, Di and Urgaonkar, Bhuvan and Sivasubramaniam, Anand},
-  booktitle={Modeling, Analysis \& Simulation of Computer and Telecommunication Systems (MASCOTS), 2012 IEEE 20th International Symposium on},
-  pages={391--400},
-  year={2012},
-  organization={IEEE}
-
+  booktitle={Proceedings of the International Symposium on Modeling, Analysis \& Simulation of Computer and Telecommunication Systems (MASCOTS)},
+  year={2012}
 }
+
+@inproceedings{Ren12,
+	author={C. Ren and others},
+	booktitle={MASCOTS},
+	year="2012",
+}
+
