--- a/paper.tex
+++ b/paper.tex
@@ -62,13 +62,14 @@
 Xiaoying Wang$^\pm$, Divya Kurthakoti Chandrashekhara$^\delta$, Md
 Haque$^\ddag$, \'I\~{n}igo Goiri$^{\dag}$, Ricardo
 Bianchini$^{\dag\ddag}$, Thu Nguyen$^\ddag$\\
-[.075in]
+[.2in]
 \begin{tabular}{ccc}
   $^\pm$Qinghai University, China & ~~~~~~~~~~ & $^\delta$Siemens Corporate Research \\
-  wxy\_cta@qhu.edu.cn & & divya.kurthakoti-chandrashekhara@siemens.com \\
-\end{tabular}\\
-[0.075in]
-\begin{tabular}{ccc}
+  wxy\_cta@qhu.edu.cn & & divya\_kc@ieee.org \\
+\\
+% \end{tabular}\\
+% [0.075in]
+% \begin{tabular}{ccc}
     $^\dag$Microsoft Research & ~~~~~~~~~~ & $^\ddag$Rutgers University \\
     \{inigog, ricardob\}@microsoft.com & & \{mdhaque, ricardob, tdnguyen\}@cs.rutgers.edu\\
 \end{tabular}
