--- a/placement.tex
+++ b/placement.tex
@@ -166,7 +166,7 @@ considering transmission system losses (DC\_WF\_OPT), considering only
 transmission system losses (Min\_Loss), and forcing the co-location of
 the datacenter and wind farm (Co-location) all lead to higher total cost.
 Specifically, DC\_WF\_OPT incurs the highest transmission cost,
-Min\_Loss incurs high cost for laying networking lines, and
+Min\_Loss incurs high costs for building the wind farm, and
 Co-location incurs high energy cost.  In comparison, considering both
 transmission system losses and datacenter construction/operation costs
 can lead to finding locations that best balance these factors, leading
